<?xml version="1.0"?>
<package format="2">
  <name>hello</name>
  <version>1.0.0</version>
  <description>The hello package</description>

  <maintainer email="ethan@todo.todo">ethan</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
